[tool.poetry]
name = "ilgam"
version = "0.1.0"
description = ""
authors = ["Seo Jihyeok <limeburst@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
influxdb-client = "^1.7.0"
seoul = "^0.2.0"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.13.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
